force-app/main/default/objects/ProgramRebateTypeBenefit/fields/PMC_CLM_ProductTierAppend__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_ProductTierAppend__c</fullName>
    <description>This field will be used to concatenate Product Family and Scale Level - so that data ordering can be enabled while pulling data in DocuSign.
To be used completely for backend purposes</description>
    <formula>TEXT(PMC_SS_ProductFamily__c) &amp; TEXT( PMC_SS_ScaleLevel__c )</formula>
    <label>ProductTierAppend</label>
    <type>Text</type>
</CustomField>