force-app/main/default/objects/ProgramRebateTypeBenefit/fields/PMC_CLM_ProgramRebateType__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_ProgramRebateType__c</fullName>
    <description>This field will be used to get the value of Type field of Rebate Type record associated with Program Rebate Type Benefit</description>
    <formula>TEXT(ProgramRebateType.PMC_SS_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Rebate Type</label>
    <type>Text</type>
</CustomField>