force-app/main/default/objects/ProgramRebateTypeBenefit/fields/PMC_SS_ActualIncentives__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ActualIncentives__c</fullName>
    <description>Stores the Actual Incentives</description>
    <label>Actual Incentives</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>