force-app/main/default/objects/ProgramRebateTypeBenefit/fields/PMC_SS_Forecasted_Quantity__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Forecasted_Quantity__c</fullName>
    <label>Forecasted Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>