force-app/main/default/objects/ProgramRebateTypeBenefit/fields/PMC_SS_InvoiceQuantity__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_InvoiceQuantity__c</fullName>
    <description>Captures the Invoice Quantity from a specific Product Family</description>
    <label>Invoice Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>