force-app/main/default/objects/ProgramRebateTypeBenefit/fields/PMC_SS_ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ProductFamily__c</fullName>
    <description>Captures Product Family to cater towards the SAP integration</description>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_SS_ProductFamilies</valueSetName>
    </valueSet>
</CustomField>