force-app/main/default/objects/ProgramRebateTypeBenefit/fields/PMC_SS_ScaleLevel__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ScaleLevel__c</fullName>
    <description>Specifies the scale level of Rebate Program</description>
    <label>Scale Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>