force-app/main/default/objects/ProgramRebateTypeBenefit/validationRules/PMC_SS_RebateTypeBenefitModification.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_SS_RebateTypeBenefitModification</fullName>
    <active>true</active>
    <description>This Validation rule will not allow create/update on Rebate Type Benefit once the Rebate program is Inactive.</description>
    <errorConditionFormula>AND(
NOT( $Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c ) ,
OR(
ISPICKVAL( PRIORVALUE( Status ) , &apos;Inactive&apos;),
ISNEW()
),
ISPICKVAL(   ProgramRebateType.RebateProgram.Status   , &apos;Inactive&apos;)
)</errorConditionFormula>
    <errorMessage>Cannot create/update Rebate Type Benefit once Rebate Program is Inactive</errorMessage>
</ValidationRule>